# py-netatmo-truetemp

./: .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  OPENSOURCE_CHECKLIST.md  README.md  RELEASE.md  RELEASE_WORKFLOW_GUIDE.md  SECURITY.md  Taskfile.yml  mise.toml  pyproject.toml  renovate.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.task/changelog/: Taskfile.yml
.task/git/: Taskfile.yml
.task/help/: Taskfile.yml
.task/version/: Taskfile.yml
docs/plans/: 2026-01-15-cli-cleanup-design.md
examples/: .gitignore  CLAUDE.md  README.md  Taskfile.yml  cli.py  display.py  helpers.py  pyproject.toml
examples/tests/: test_cli.py
scripts/: expire_token.py
src/: netatmo.py
src/netatmo_api/: __init__.py  api_client.py  auth_manager.py  constants.py  home_service.py  logger.py
src/py_netatmo_truetemp/: __init__.py  api_client.py  auth_manager.py  cookie_store.py  home_service.py  logger.py  netatmo_api.py  thermostat_service.py  types.py
tasks/changelog/: Taskfile.yml
tasks/git/: Taskfile.yml
tasks/release/: Taskfile.yml
tasks/version/: Taskfile.yml
tests/: conftest.py  test_api_client.py  test_auth_manager.py  test_cookie_store.py  test_exceptions.py  test_home_service.py  test_thermostat_service.py  test_validators.py
