[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-netatmo-truetemp"
version = "0.1.0"
description = "Python client for Netatmo API with truetemperature control - set room temperatures programmatically"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "platformdirs>=4.0.0",
    "requests==2.32.3",
]

[dependency-groups]
dev = [
    "bandit[toml]>=1.8.0",
    "mypy>=1.18.2",
    "pylint>=4.0.3",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.15.1",
    "pytest>=9.0.2",
    "ruff>=0.14.5",
    "types-requests>=2.32.4.20250913",
]

[tool.hatch.build.targets.wheel]
packages = ["src/py_netatmo_truetemp"]
