[project]
name = "netatmo-cli-examples"
version = "0.1.0"
description = "CLI examples for py-netatmo-truetemp"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "py-netatmo-truetemp",
    "click>=8.1.8",
    "rich>=14.2.0",
]

[tool.uv.sources]
py-netatmo-truetemp = { path = "..", editable = true }
