[project]
name = "netatmo-cli-examples"
version = "0.1.0"
description = "CLI examples for py-netatmo-truetemp"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "py-netatmo-truetemp",
    "typer[all]>=0.9.0",
    "rich>=14.2.0",
]

[tool.uv.sources]
py-netatmo-truetemp = { path = "..", editable = true }
